--- a/roles/clickhouse_role/molecule/centos_8/molecule.yml
+++ b/roles/clickhouse_role/molecule/centos_8/molecule.yml
@@ -7,10 +7,10 @@ driver:
     D: true
     vv: true
 
-# lint: |
-#  yamllint .
-#  ansible-lint
- # flake8
+lint: |
+  yamllint .
+  ansible-lint
+# flake8
 platforms:
   - name: centos_8
     image: centos:8
