--- a/roles/clickhouse_role/molecule/centos_7/molecule.yml
+++ b/roles/clickhouse_role/molecule/centos_7/molecule.yml
@@ -32,9 +32,9 @@ platforms:
       container: docker
 provisioner:
   name: ansible
-  options:
-    vv: true
-    D: true
+#   options:
+#     vv: true
+#     D: true
   inventory:
     links:
       hosts: ../resources/inventory/hosts.yml
