--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -2,11 +2,11 @@
 all:
   hosts:
     host-lt:
-      ansible_host: 51.250.18.171
+      ansible_host: 51.250.94.126
     host-vc:
-      ansible_host: 51.250.97.219
+      ansible_host: 51.250.94.126
     host-cl:
-      ansible_host: 51.250.100.77
+      ansible_host: 51.250.94.126
   vars:
     ansible_connection: ssh
     ansible_user: arsen
@@ -14,9 +14,9 @@ all:
 clickhouse:
   hosts:
     host-cl:
-# vector:
-#   hosts:
-#     host-vc:
+vector:
+  hosts:
+    host-vc:
 lighthouse:
   hosts:
     host-lt:
