--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -2,11 +2,11 @@
 all:
   hosts:
     host-lt:
-      ansible_host: 51.250.94.126
+      ansible_host: localhost
     host-vc:
-      ansible_host: 51.250.94.126
+      ansible_host: localhost
     host-cl:
-      ansible_host: 51.250.94.126
+      ansible_host: localhost
   vars:
     ansible_connection: ssh
     ansible_user: arsen
