--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -7,10 +7,10 @@ all:
       ansible_host: localhost
     host-cl:
       ansible_host: localhost
-  vars:
-    ansible_connection: ssh
-    ansible_user: arsen
-    ansible_python_interpreter: /usr/bin/python3
+#  vars:
+#    ansible_connection: ssh
+#    ansible_user: arsen
+#    ansible_python_interpreter: /usr/bin/python3
 clickhouse:
   hosts:
     host-cl:
